# production-ai-template

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  docker-compose.yml  pyproject.toml
.claude/rules/: code-style.md  testing.md
.github/workflows/: ci.yml
app/: Dockerfile  config.py  main.py  models.py  types.py
app/agents/: adaptive_router.py  document_grader.py  executor.py  query_decomposer.py
app/api/: ingest.py
app/components/: __init__.py  hybrid_retriever.py  openkb_client.py  reranker.py
app/prompts/: __init__.py  registry.py  templates.py
app/security/: __init__.py  auth.py  content_filter.py  input_guard.py  output_filter.py  resilience.py
app/services/: context_manager.py  conversation.py  database.py  headroom_adapter.py  hooks.py  ingestion_service.py  llm_client.py  query_rewriter.py  query_router.py  rag_pipeline.py  semantic_cache.py  state_store.py
data/index_config/: config.json
data/processed/: .gitkeep
data/raw/: .gitkeep
docs/: PRD-production-ai-template.md
docs/brainstorms/: 2026-07-24-chat-frontend-redesign-requirements.md  2026-07-24-dynamic-data-source-ingestion-requirements.md
docs/ideation/: 2026-07-23-wow-factors-ideation.md  2026-07-24-chat-frontend-redesign-ideation.md  2026-07-24-connectors-and-apis-rethink-ideation.md
docs/plans/: 2026-07-24-001-feat-chat-frontend-redesign-plan.md  2026-07-24-002-feat-dynamic-data-source-ingestion-plan.md
evaluation/: golden_dataset.json  offline_eval.py  online_monitor.py  trajectory_logger.py
frontend/: Dockerfile  app.py  requirements.txt
frontend/components/: __init__.py  chat_card.py  (+4 more)
migrations/: env.py
observability/: cost_tracker.py  feedback.py  prometheus_rules.yml  tracer.py
scripts/: healthcheck.py  migrate.py  seed.py
tests/: conftest.py  test_cache.py  test_deep_research.py  test_harness.py  test_headroom_adapter.py  test_llm_integration.py  test_memory_system.py  test_openkb_client.py  test_retrieval.py  test_routing.py
(+35 files in other folders)
