[tool.poetry]
name = "production-ai-template"
version = "0.1.0"
description = "A production-grade, 9-layer AI/LLM application template."
authors = ["Collins <user@example.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
uvicorn = "^0.28.0"
pydantic = "^2.6.4"
pydantic-settings = "^2.2.1"
redis = "^5.0.3"
opentelemetry-api = "^1.23.0"
opentelemetry-sdk = "^1.23.0"
opentelemetry-instrumentation-fastapi = "^0.44b0"
httpx = "^0.27.0"
jinja2 = "^3.1.3"
tiktoken = "^0.6.0"
sqlalchemy = "^2.0.28"
asyncpg = "^0.29.0"
aiosqlite = "^0.20.0"
alembic = "^1.13.1"
pyjwt = "^2.8.0"
cryptography = "^42.0.5"
slowapi = "^0.1.9"
greenlet = "^3.0.3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
black = "^24.3.0"
ruff = "^0.3.3"
mypy = "^1.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.mypy]
explicit_package_bases = true
namespace_packages = true
